# rgbd_slam

./: CMakeLists.txt  README.md  detect_features.cpp  generatePointCloud.cpp  parameters.txt  slamBase.cpp
data/: result_after.g2o  result_before.g2o
include/: slamBase.h
src/: CMakeLists.txt  slam.cpp  slamBase.cpp
